<resources>
    <string name="app_name">Calculadora</string>
    <string name="title">Calculadora</string>
    <string name="num1">Número 1</string>
    <string name="num2">Número 2</string>
    <string name="sum">Sumar</string>
    <string name="res">Restar</string>
    <string name="mul">Multiplicar</string>
    <string name="div">Dividir</string>
    <string name="blank">-</string>
</resources>